import java.util.ArrayList;
import java.util.Arrays;

public class Main {
    public static void main(String[] args) {
        Menu start = new Menu();
        start.RunMenu();
    }
}